Fixed form alignment

--- a/src/components/signup/index.css
+++ b/src/components/signup/index.css
@@ -1,5 +1,5 @@
 .login-form{
-	margin-left: 20%;
+	/*margin-left: 20%;*/
 }
 
 .form-style{
